Bug 1922007 - [devtools] Always use a light scheme for about:debugging message. r=devtools-reviewers,jdescottes.
The message background and text colors are the same in light and dark mode,
and are best suited for light theme.
To avoid contrast issues with elements inside those messages (like links), we
force the color scheme to light.

Differential Revision: https://phabricator.services.mozilla.com/D224293

UltraBlame original commit: 756f370f19223188468999a6cc1cf7553db60abd

--- a/devtools/client/aboutdebugging/src/components/shared/Message.css
+++ b/devtools/client/aboutdebugging/src/components/shared/Message.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 .
 message
 -
@@ -216,6 +274,128 @@ icon
 )
 ;
 }
+/
+*
+*
+Layout
+of
+the
+message
+*
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+|
+Icon
+|
+Message
+content
+|
+closing
+|
+*
+|
+|
+(
+several
+lines
+)
+|
+button
+|
+*
+|
+|
+(
+.
+.
+.
+)
+|
+(
+optional
+)
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+/
 .
 message
 {
@@ -363,6 +543,47 @@ properties
 :
 fill
 ;
+/
+*
+Messages
+always
+have
+a
+background
+color
+that
+is
+suited
+for
+light
+scheme
+so
+force
+the
+color
+scheme
+to
+avoid
+contrast
+issues
+on
+other
+elements
+(
+e
+.
+g
+.
+links
+)
+*
+/
+color
+-
+scheme
+:
+light
+;
 }
 .
 message__icon
@@ -471,6 +692,17 @@ message__button
 :
 hover
 {
+/
+*
+reverse
+colors
+with
+icon
+when
+hover
+state
+*
+/
 background
 -
 color
@@ -505,6 +737,17 @@ message__button
 :
 active
 {
+/
+*
+reverse
+colors
+with
+text
+when
+active
+state
+*
+/
 background
 -
 color
