Bug 1922546 - Add back the z-index for #navigator-toolbox. r=emilio,desktop-theme-reviewers,sidebar-reviewers,nsharpley
* Adds a z-index for the #navigator-toolbox (with and without sidebar.verticalTabs)
* This will regress Bug 1921811, and will need follow-up in bug Bug 1921257

Differential Revision: https://phabricator.services.mozilla.com/D224521

UltraBlame original commit: 0ce46cb64bf09bfa7f0edd1340f7d7166fbbf8ec

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -735,6 +735,36 @@ toolbar
 :
 3
 ;
+/
+*
+z
+-
+indices
+that
+fight
+in
+the
+general
+browser
+/
+toolbox
+area
+*
+/
+-
+-
+browser
+-
+area
+-
+z
+-
+index
+-
+toolbox
+:
+1
+;
 -
 -
 toolbarbutton
@@ -1202,40 +1232,10 @@ appearance
 :
 none
 ;
-/
-*
-stylelint
--
-disable
--
-next
--
-line
-media
--
-query
--
-no
--
-invalid
-*
-/
-media
-(
--
-moz
--
-bool
--
-pref
+position
 :
-"
-sidebar
-.
-verticalTabs
-"
-)
-{
+relative
+;
 /
 *
 Should
@@ -1256,6 +1256,31 @@ in
 the
 DOM
 )
+TODO
+(
+sfoster
+)
+:
+we
+need
+a
+broader
+re
+-
+think
+of
+stacking
+and
+paint
+order
+.
+See
+bug
+1921257
+and
+bug
+1921811
+.
 *
 /
 z
@@ -1277,7 +1302,6 @@ index
 toolbox
 )
 ;
-}
 background
 -
 color
