Bug 1920516 - Add StatusBarColorManager to manage status bar color logic r=android-reviewers,007
Differential Revision: https://phabricator.services.mozilla.com/D223945

UltraBlame original commit: c5d40fa211a5699a1e7322ec86344773fd24d120

--- a/mobile/android/fenix/app/src/main/res/values/styles.xml
+++ b/mobile/android/fenix/app/src/main/res/values/styles.xml
@@ -9016,6 +9016,41 @@ style
 name
 =
 "
+SearchDialogStyleTabStrip
+"
+parent
+=
+"
+SearchDialogStyle
+"
+>
+<
+item
+name
+=
+"
+android
+:
+statusBarColor
+"
+>
+?
+attr
+/
+layer3
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
 SearchSelectorIconStyle
 "
 >
