--- a/toolkit/components/httpsonlyerror/content/errorpage.html
+++ b/toolkit/components/httpsonlyerror/content/errorpage.html
@@ -664,6 +664,77 @@ button
 div
 >
 <
+p
+id
+=
+"
+explanation
+-
+iframe
+"
+hidden
+>
+<
+span
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+httpsonly
+-
+explanation
+-
+iframe
+"
+>
+<
+/
+span
+>
+<
+a
+id
+=
+"
+mixedContentLearnMoreLink
+"
+target
+=
+"
+_blank
+"
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+httpsonly
+-
+link
+-
+learn
+-
+more
+"
+>
+<
+/
+a
+>
+<
+/
+p
+>
+<
 div
 class
 =
