Bug 1884118 - Make letter-spacing accept <length-percentage>, not just <length>. r=dshin
As per https://drafts.csswg.org/css-text-4/#letter-spacing-property.

Differential Revision: https://phabricator.services.mozilla.com/D224747

UltraBlame original commit: 94d220f04c1c6cfb9a0c000c796e3ae6e26953fc

--- a/layout/style/test/test_transitions_per_property.html
+++ b/layout/style/test/test_transitions_per_property.html
@@ -1254,7 +1254,9 @@ spacing
 :
 [
 test_length_transition
+test_percent_transition
 test_length_unclamped
+test_percent_unclamped
 ]
 "
 lighting
@@ -2036,7 +2038,9 @@ spacing
 :
 [
 test_length_transition
+test_percent_transition
 test_length_unclamped
+test_percent_unclamped
 ]
 "
 x
