Bug 1922752 - Use --panel-border-radius for autoscroller. r=desktop-theme-reviewers,dao
This makes sure that the panel is square if the OS doesn't support
compositing / transparency properly.

While at it, clean-up a bit (use nesting and other variables provided by
popup.css).

Differential Revision: https://phabricator.services.mozilla.com/D224762

UltraBlame original commit: c65d0bbb4779bba1885a50d53ac6cae4ce9481a4

--- a/toolkit/themes/shared/global-shared.css
+++ b/toolkit/themes/shared/global-shared.css
@@ -2662,10 +2662,48 @@ image
 panel
 -
 shadow
+:
+0
+0
+var
+(
+-
+-
+panel
+-
+shadow
+-
+margin
+)
+rgba
+(
+0
+0
+0
+.
+2
+)
+;
+-
+-
+panel
+-
+shadow
 -
 margin
 :
 4px
+;
+-
+-
+panel
+-
+border
+-
+radius
+:
+100
+%
 ;
 /
 *
@@ -2698,9 +2736,7 @@ events
 :
 none
 ;
-}
-.
-autoscroller
+&
 :
 :
 part
@@ -2708,13 +2744,6 @@ part
 content
 )
 {
-border
--
-radius
-:
-100
-%
-;
 background
 -
 clip
@@ -2722,31 +2751,6 @@ clip
 padding
 -
 box
-;
-box
--
-shadow
-:
-0
-0
-var
-(
--
--
-panel
--
-shadow
--
-margin
-)
-rgba
-(
-0
-0
-0
-.
-2
-)
 ;
 width
 :
@@ -2759,8 +2763,7 @@ height
 %
 ;
 }
-.
-autoscroller
+&
 [
 scrolldir
 =
@@ -2799,8 +2802,7 @@ svg
 )
 ;
 }
-.
-autoscroller
+&
 [
 scrolldir
 =
@@ -2838,6 +2840,7 @@ svg
 "
 )
 ;
+}
 }
 /
 *
