Bug 1923088 - Update PDF.js to new version 81cf42df470f85eb60150bdffca380e3eee79c08 r=pdfjs-reviewers,fluent-reviewers,flod,marco
Differential Revision: https://phabricator.services.mozilla.com/D224756

UltraBlame original commit: 058e891ec795a4c89941d59d4b198325fe095ab2

--- a/toolkit/components/pdfjs/content/web/viewer-geckoview.css
+++ b/toolkit/components/pdfjs/content/web/viewer-geckoview.css
@@ -8146,6 +8146,24 @@ color
 ;
 -
 -
+toolbar
+-
+height
+:
+48px
+;
+-
+-
+toolbar
+-
+border
+-
+width
+:
+1px
+;
+-
+-
 toolbarButton
 -
 download
@@ -8582,16 +8600,16 @@ position
 absolute
 ;
 inset
--
-block
 :
-41px
+var
+(
+-
+-
+toolbar
+-
+height
+)
 0
-;
-inset
--
-inline
-:
 0
 ;
 outline
@@ -8914,7 +8932,28 @@ width
 ;
 height
 :
-40px
+calc
+(
+var
+(
+-
+-
+toolbar
+-
+height
+)
++
+var
+(
+-
+-
+toolbar
+-
+border
+-
+width
+)
+)
 ;
 top
 :
@@ -8924,11 +8963,15 @@ left
 :
 0
 ;
+padding
+:
+2px
+;
 box
 -
 sizing
 :
-content
+border
 -
 box
 ;
@@ -8939,7 +8982,16 @@ block
 end
 :
 solid
-1px
+var
+(
+-
+-
+toolbar
+-
+border
+-
+width
+)
 var
 (
 -
@@ -8966,9 +9018,7 @@ bg
 color
 )
 ;
-}
-#
-floatingToolbar
+&
 .
 show
 {
@@ -8983,11 +9033,11 @@ opacity
 1
 ;
 }
-#
-floatingToolbar
+&
 :
 not
 (
+.
 show
 )
 {
@@ -9048,7 +9098,8 @@ auto
 ;
 height
 :
-auto
+100
+%
 ;
 outline
 :
@@ -9058,59 +9109,7 @@ position
 :
 relative
 ;
-}
-.
-toolbarButton
->
-span
-{
-color
-:
-var
-(
--
--
-toolbar
--
-fg
--
-color
-)
-;
-width
-:
-auto
-;
-height
-:
-auto
-;
-overflow
-:
-hidden
-;
-}
-:
-is
-(
-.
-toolbarButton
-.
-dialogButton
-)
-[
-disabled
-]
-{
-opacity
-:
-0
-.
-5
-;
-}
-.
-toolbarButton
+&
 :
 :
 before
@@ -9157,6 +9156,36 @@ inline
 8px
 ;
 }
+>
+span
+{
+color
+:
+var
+(
+-
+-
+toolbar
+-
+fg
+-
+color
+)
+;
+width
+:
+auto
+;
+height
+:
+auto
+;
+overflow
+:
+hidden
+;
+}
+&
 #
 download
 :
@@ -9177,6 +9206,27 @@ download
 -
 icon
 )
+;
+}
+}
+}
+:
+is
+(
+.
+toolbarButton
+.
+dialogButton
+)
+[
+disabled
+]
+{
+opacity
+:
+0
+.
+5
 ;
 }
 .
