--- a/toolkit/components/pdfjs/content/web/viewer.css
+++ b/toolkit/components/pdfjs/content/web/viewer.css
@@ -10080,6 +10080,10 @@ viewerContainer
 pdfPresentationMode
 :
 fullscreen
+.
+annotationEditorLayer
+.
+disabled
 {
 .
 noAltTextBadge
@@ -21337,7 +21341,7 @@ z
 -
 index
 :
-100
+1
 ;
 font
 :
@@ -21351,12 +21355,7 @@ top
 :
 1px
 solid
-rgb
-(
-51
-51
-51
-)
+transparent
 ;
 border
 -
@@ -21587,6 +21586,12 @@ outline
 :
 none
 ;
+z
+-
+index
+:
+0
+;
 }
 #
 viewerContainer
@@ -21695,16 +21700,7 @@ z
 -
 index
 :
-9999
-;
-}
-#
-toolbarContainer
-{
-width
-:
-100
-%
+2
 ;
 }
 #
@@ -22392,20 +22388,6 @@ start
 1px
 ;
 }
-}
-.
-splitToolbarButton
-{
-margin
-:
-2px
-;
-display
-:
-inline
--
-block
-;
 }
 .
 dialogButton
@@ -27755,6 +27737,11 @@ height
 -
 6px
 )
+;
+width
+:
+100
+%
 ;
 height
 :
