--- a/layout/generic/crashtests/text-overflow-bug666751-2.html
+++ b/layout/generic/crashtests/text-overflow-bug666751-2.html
@@ -14,20 +14,29 @@ head
 <
 script
 >
-function
-finish
-(
-)
-{
 window
 .
-removeEventListener
+addEventListener
 (
 "
-MozAfterPaint
+MozReftestInvalidate
 "
-finish
+(
 )
+=
+>
+{
+document
+.
+body
+.
+style
+.
+backgroundColor
+=
+"
+lime
+"
 ;
 document
 .
@@ -41,6 +50,13 @@ class
 )
 ;
 }
+{
+once
+:
+true
+}
+)
+;
 <
 /
 script
@@ -51,33 +67,6 @@ head
 >
 <
 body
-onload
-=
-"
-window
-.
-addEventListener
-(
-'
-MozAfterPaint
-'
-finish
-false
-)
-;
-document
-.
-body
-.
-style
-.
-backgroundColor
-=
-'
-lime
-'
-;
-"
 >
 <
 div
