Bug 1922393: Keep padding-inline for switchtab and clipboard action button even if compact mode r=desktop-theme-reviewers,urlbar-reviewers,dao,adw
Differential Revision: https://phabricator.services.mozilla.com/D224433

UltraBlame original commit: ac0078258546006cf65da1d55e03503f409bd2f7

--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -6565,10 +6565,29 @@ compact
 &
 {
 padding
+-
+block
 :
 3px
+;
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+&
+{
+padding
+-
+inline
+:
 6px
 ;
+}
 }
 /
 *
