Bug 1865371 - Replace --in-content-box-background with --background-color-box r=cmkm,desktop-theme-reviewers,credential-management-reviewers,omc-reviewers,aminomancer,dao,issammani
Differential Revision: https://phabricator.services.mozilla.com/D222674

UltraBlame original commit: befd914f4c36d8cb804b103aa06b64ca6d20a1ef

--- a/browser/components/aboutlogins/content/components/login-alert.css
+++ b/browser/components/aboutlogins/content/components/login-alert.css
@@ -131,13 +131,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 border
@@ -208,13 +206,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 }
