--- a/browser/components/protections/content/protections.css
+++ b/browser/components/protections/content/protections.css
@@ -6580,13 +6580,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 0
 %
@@ -6610,13 +6608,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 40
 %
@@ -6624,13 +6620,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 100
 %
@@ -6751,13 +6745,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 0
 %
@@ -6781,13 +6773,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 40
 %
@@ -6795,13 +6785,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 100
 %
