--- a/toolkit/components/aboutmemory/content/aboutMemory.css
+++ b/toolkit/components/aboutmemory/content/aboutMemory.css
@@ -225,13 +225,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 }
@@ -346,13 +344,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 user
@@ -490,13 +486,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 display
