--- a/toolkit/components/aboutprocesses/content/aboutProcesses.css
+++ b/toolkit/components/aboutprocesses/content/aboutProcesses.css
@@ -138,13 +138,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 margin
@@ -253,13 +251,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 }
