--- a/toolkit/components/certviewer/content/components/certificate-section.css
+++ b/toolkit/components/certviewer/content/components/certificate-section.css
@@ -160,13 +160,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 box
@@ -263,13 +261,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 color
