--- a/toolkit/components/aboutinference/content/aboutInference.css
+++ b/toolkit/components/aboutinference/content/aboutInference.css
@@ -262,13 +262,11 @@ var
 (
 -
 -
-in
+background
 -
-content
+color
 -
 box
--
-background
 )
 ;
 }
@@ -381,26 +379,53 @@ display
 :
 flex
 ;
-justify
+flex
 -
-content
+wrap
 :
-space
--
-between
+wrap
 ;
-}
-fieldset
-{
-width
-:
-49
-%
-;
-padding
+gap
 :
 10px
 ;
+/
+*
+Optional
+:
+Adds
+some
+space
+between
+fieldsets
+*
+/
+}
+.
+fieldset
+-
+container
+fieldset
+{
+flex
+:
+1
+1
+48
+%
+;
+/
+*
+Makes
+the
+fieldsets
+take
+approximately
+half
+the
+width
+*
+/
 box
 -
 sizing
@@ -409,6 +434,18 @@ border
 -
 box
 ;
+/
+*
+Ensures
+padding
+/
+border
+do
+not
+affect
+width
+*
+/
 box
 -
 shadow
@@ -425,16 +462,6 @@ rgba
 .
 1
 )
-;
-}
-fieldset
-.
-large
-{
-width
-:
-100
-%
 ;
 }
 legend
@@ -933,5 +960,244 @@ border
 radius
 :
 5px
+;
+}
+.
+tab
+-
+menu
+{
+display
+:
+flex
+;
+justify
+-
+content
+:
+flex
+-
+start
+;
+list
+-
+style
+:
+none
+;
+padding
+:
+0
+;
+margin
+:
+0
+0
+20px
+0
+;
+background
+-
+color
+:
+#
+f1f1f1
+;
+}
+.
+tab
+-
+menu
+li
+{
+padding
+:
+10px
+20px
+;
+cursor
+:
+pointer
+;
+background
+-
+color
+:
+#
+ccc
+;
+margin
+-
+right
+:
+5px
+;
+border
+:
+1px
+solid
+#
+ddd
+;
+}
+.
+tab
+-
+menu
+li
+.
+active
+{
+background
+-
+color
+:
+#
+fff
+;
+border
+-
+bottom
+:
+none
+;
+}
+.
+tab
+-
+content
+{
+display
+:
+none
+;
+}
+.
+tab
+-
+content
+.
+active
+{
+display
+:
+block
+;
+}
+#
+modelFiles
+{
+display
+:
+flex
+;
+flex
+-
+wrap
+:
+wrap
+;
+gap
+:
+10px
+;
+/
+*
+Optional
+:
+Adds
+spacing
+between
+tables
+*
+/
+}
+#
+modelFiles
+table
+{
+flex
+:
+1
+1
+calc
+(
+33
+.
+333
+%
+-
+10px
+)
+;
+/
+*
+Each
+table
+takes
+1
+/
+3
+of
+the
+container
+width
+*
+/
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
+#
+modelFiles
+table
+caption
+{
+caption
+-
+side
+:
+bottom
+;
+/
+*
+Moves
+the
+caption
+below
+the
+table
+*
+/
+text
+-
+align
+:
+center
+;
+/
+*
+Centers
+the
+caption
+text
+*
+/
+font
+-
+weight
+:
+bold
+;
+margin
+-
+top
+:
+1px
 ;
 }
