Bug 1919752: Test pasting a folder under content analysis r=dlp-reviewers,gstoll
Differential Revision: https://phabricator.services.mozilla.com/D224345

UltraBlame original commit: e11796c0a840bd2b7fb5d333c6a78a89f59a243f

--- a/toolkit/components/contentanalysis/tests/browser/clipboard_paste_file.html
+++ b/toolkit/components/contentanalysis/tests/browser/clipboard_paste_file.html
@@ -144,6 +144,20 @@ pasteAllowed
 .
 checked
 ;
+let
+pasteIsDir
+=
+document
+.
+getElementById
+(
+"
+pasteIsDir
+"
+)
+.
+checked
+;
 is
 (
 dt
@@ -312,6 +326,33 @@ files
 "
 )
 ;
+if
+(
+pasteIsDir
+)
+{
+is
+(
+dt
+.
+files
+[
+0
+]
+.
+type
+"
+"
+"
+Correct
+folder
+type
+"
+)
+;
+}
+else
+{
 is
 (
 dt
@@ -334,6 +375,7 @@ type
 "
 )
 ;
+}
 }
 is
 (
@@ -408,6 +450,44 @@ return
 "
 ;
 }
+let
+file
+=
+dt
+.
+files
+[
+0
+]
+;
+if
+(
+pasteIsDir
+)
+{
+is
+(
+dt
+.
+items
+[
+0
+]
+.
+type
+"
+"
+"
+Correct
+folder
+item
+type
+"
+)
+;
+}
+else
+{
 is
 (
 dt
@@ -425,20 +505,11 @@ plain
 "
 "
 Correct
+file
 item
 type
 "
 )
-;
-let
-file
-=
-dt
-.
-files
-[
-0
-]
 ;
 is
 (
@@ -462,6 +533,7 @@ text
 "
 )
 ;
+}
 return
 file
 .
@@ -509,6 +581,35 @@ id
 =
 "
 pasteAllowed
+"
+type
+=
+"
+checkbox
+"
+>
+<
+label
+for
+=
+"
+pasteIsDir
+"
+>
+Paste
+is
+directory
+?
+<
+/
+label
+>
+<
+input
+id
+=
+"
+pasteIsDir
 "
 type
 =
