--- a/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
+++ b/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
@@ -4847,6 +4847,50 @@ pref_key_debug_settings
 string
 >
 <
+!
+-
+-
+Whether
+the
+debug
+menu
+(
+secret
+settings
+secret
+debug
+info
+nimbus
+experiments
+etc
+.
+)
+should
+be
+enabled
+persistently
+-
+-
+>
+<
+string
+name
+=
+"
+pref_key_persistent_debug_menu
+"
+translatable
+=
+"
+false
+"
+>
+pref_key_persistent_debug_menu
+<
+/
+string
+>
+<
 string
 name
 =
