--- a/mobile/android/fenix/app/src/main/res/values/static_strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/static_strings.xml
@@ -444,6 +444,55 @@ string
 !
 -
 -
+App
+preference
+label
+for
+keeping
+the
+debug
+menu
+(
+secret
+settings
+secret
+debug
+info
+nimbus
+experiments
+etc
+.
+)
+permanently
+revealed
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_persistent_debug_menu
+"
+translatable
+=
+"
+false
+"
+>
+Keep
+Debug
+Menu
+revealed
+<
+/
+string
+>
+<
+!
+-
+-
 Secret
 Settings
 Strings
