--- a/mobile/android/fenix/app/src/main/res/xml/secret_settings_preferences.xml
+++ b/mobile/android/fenix/app/src/main/res/xml/secret_settings_preferences.xml
@@ -731,6 +731,35 @@ preferences_debug_settings_remote_settings_server
 /
 >
 <
+SwitchPreference
+android
+:
+key
+=
+"
+string
+/
+pref_key_persistent_debug_menu
+"
+android
+:
+title
+=
+"
+string
+/
+preferences_persistent_debug_menu
+"
+app
+:
+iconSpaceReserved
+=
+"
+false
+"
+/
+>
+<
 /
 PreferenceScreen
 >
