Bug 1922262: Tab group context menu chicklet uses correct styling r=dao,desktop-theme-reviewers,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224547

UltraBlame original commit: 51e855a9eb6c9a0adb4247b6705099abf3d0d6e7

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -10716,3 +10716,81 @@ png
 }
 }
 }
+.
+tab
+-
+contextmenu
+-
+group
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+group
+-
+chicklet
+.
+svg
+"
+)
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+light
+-
+dark
+(
+var
+(
+-
+-
+tab
+-
+group
+-
+color
+)
+var
+(
+-
+-
+tab
+-
+group
+-
+color
+-
+invert
+)
+)
+;
+}
