Bug 1909965 - Disable instead of hiding launch on login option in about:preferences r=fluent-reviewers,settings-reviewers,firefox-desktop-core-reviewers ,Gijs,bolsson,mossop
Differential Revision: https://phabricator.services.mozilla.com/D219673

UltraBlame original commit: 3f0967be270c67115968d0a5ffc287b213d7b842

--- a/browser/components/preferences/preferences.xhtml
+++ b/browser/components/preferences/preferences.xhtml
@@ -1048,6 +1048,26 @@ link
 rel
 =
 "
+localization
+"
+href
+=
+"
+toolkit
+/
+global
+/
+profileSelection
+.
+ftl
+"
+/
+>
+<
+link
+rel
+=
+"
 shortcut
 icon
 "
