--- a/browser/components/preferences/main.inc.xhtml
+++ b/browser/components/preferences/main.inc.xhtml
@@ -452,6 +452,87 @@ div
 /
 hbox
 >
+<
+hbox
+id
+=
+"
+windowsLaunchOnLoginDisabledProfileBox
+"
+align
+=
+"
+center
+"
+class
+=
+"
+indent
+"
+hidden
+=
+"
+true
+"
+>
+<
+hbox
+class
+=
+"
+info
+-
+icon
+-
+container
+"
+>
+<
+html
+:
+img
+class
+=
+"
+info
+-
+icon
+"
+/
+>
+<
+/
+hbox
+>
+<
+html
+:
+div
+data
+-
+l10n
+-
+id
+=
+"
+windows
+-
+launch
+-
+on
+-
+login
+-
+profile
+-
+disabled
+"
+/
+>
+<
+/
+hbox
+>
 #
 endif
 <
