Bug 1918651: Emphasis container color for Switch to tab button r=desktop-theme-reviewers,urlbar-reviewers,mak,dao
Depends on D224433

Differential Revision: https://phabricator.services.mozilla.com/D224440

UltraBlame original commit: f5fd8ef6d0230f6a4135fa28b77f2f5d2e3a0943

--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -6588,6 +6588,23 @@ inline
 6px
 ;
 }
+&
+.
+urlbarView
+-
+userContext
+{
+border
+-
+block
+-
+start
+-
+width
+:
+3px
+;
+}
 }
 /
 *
@@ -6739,21 +6756,6 @@ focus
 color
 )
 ;
-border
-:
-1px
-solid
-var
-(
--
--
-urlbarView
--
-separator
--
-color
-)
-;
 padding
 -
 inline
@@ -6831,6 +6833,72 @@ favicon
 width
 )
 ;
+border
+-
+inline
+:
+1px
+solid
+var
+(
+-
+-
+urlbarView
+-
+separator
+-
+color
+)
+;
+border
+-
+block
+-
+end
+:
+1px
+solid
+var
+(
+-
+-
+urlbarView
+-
+separator
+-
+color
+)
+;
+&
+:
+not
+(
+.
+urlbarView
+-
+userContext
+)
+{
+border
+-
+block
+-
+start
+:
+1px
+solid
+var
+(
+-
+-
+urlbarView
+-
+separator
+-
+color
+)
+;
+}
 &
 :
 -
