--- a/toolkit/content/aboutGlean.css
+++ b/toolkit/content/aboutGlean.css
@@ -124,3 +124,50 @@ error
 )
 ;
 }
+#
+feedback
+{
+visibility
+:
+hidden
+;
+position
+:
+fixed
+;
+z
+-
+index
+:
+1
+;
+inset
+-
+inline
+-
+start
+:
+50
+%
+;
+transform
+:
+translateX
+(
+-
+50
+%
+)
+;
+bottom
+:
+var
+(
+-
+-
+space
+-
+medium
+)
+;
+}
