Bug 1886007 - Create avatar selector for about:editprofile. r=jhirsch,desktop-theme-reviewers,hjones
Differential Revision: https://phabricator.services.mozilla.com/D223199

UltraBlame original commit: d2d9c9a04017ae77e9c3921ba09d357cd3a4920e

--- a/browser/components/profiles/content/edit-profile-card.css
+++ b/browser/components/profiles/content/edit-profile-card.css
@@ -56,6 +56,32 @@ MPL
 .
 *
 /
+:
+host
+{
+-
+-
+header
+-
+avatar
+-
+size
+:
+80px
+;
+-
+-
+header
+-
+avatar
+-
+img
+-
+size
+:
+40px
+;
+}
 html
 body
 {
@@ -198,6 +224,63 @@ var
 space
 -
 medium
+)
+;
+}
+#
+header
+-
+avatar
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+stroke
+;
+width
+:
+var
+(
+-
+-
+header
+-
+avatar
+-
+size
+)
+;
+height
+:
+var
+(
+-
+-
+header
+-
+avatar
+-
+size
+)
+;
+border
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+circle
 )
 ;
 }
@@ -465,40 +548,4 @@ space
 xlarge
 )
 ;
-/
-*
-TODO
-:
-bug
-1886007
-will
-implement
-the
-avatars
-*
-/
->
-.
-avatar
-{
-width
-:
-40px
-;
-height
-:
-40px
-;
-border
-:
-1px
-solid
-;
-border
--
-radius
-:
-20px
-;
-}
 }
