--- a/browser/components/profiles/content/profile-card.css
+++ b/browser/components/profiles/content/profile-card.css
@@ -82,6 +82,18 @@ css
 "
 )
 ;
+:
+host
+{
+-
+-
+avatar
+-
+size
+:
+80px
+;
+}
 .
 profile
 -
@@ -478,6 +490,10 @@ background
 -
 container
 {
+position
+:
+relative
+;
 width
 :
 200px
@@ -510,6 +526,10 @@ background
 -
 image
 {
+position
+:
+absolute
+;
 width
 :
 100
@@ -603,6 +623,70 @@ medium
 )
 0
 0
+;
+}
+.
+profile
+-
+avatar
+{
+width
+:
+var
+(
+-
+-
+avatar
+-
+size
+)
+;
+height
+:
+var
+(
+-
+-
+avatar
+-
+size
+)
+;
+z
+-
+index
+:
+1
+;
+background
+-
+size
+:
+contain
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+position
+:
+center
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+stroke
 ;
 }
 .
