Bug 1910768 - Add an app-wide desktop mode browsing preference r=android-reviewers,rsainani
- Ensure any pre-loaded tabs have the correct desktop mode preference
- Rename BrowserActions related to toggling Desktop Mode to better indicate their use case
- Rename "Site permissions" to "Site settings"

Differential Revision: https://phabricator.services.mozilla.com/D222543

UltraBlame original commit: 8e3eff9c7b2e44c8eac2ba5b8b94b20a079ca1c2

--- a/mobile/android/fenix/app/src/main/res/navigation/nav_graph.xml
+++ b/mobile/android/fenix/app/src/main/res/navigation/nav_graph.xml
@@ -5838,7 +5838,7 @@ settings
 .
 sitepermissions
 .
-SitePermissionsFragment
+SiteSettingsFragment
 "
 android
 :
@@ -5847,7 +5847,7 @@ label
 "
 string
 /
-preferences_site_permissions
+preferences_site_settings
 "
 >
 <
