--- a/mobile/android/fenix/app/src/main/res/xml/site_permissions_preferences.xml
+++ b/mobile/android/fenix/app/src/main/res/xml/site_permissions_preferences.xml
@@ -203,6 +203,109 @@ androidx
 .
 preference
 .
+PreferenceCategory
+android
+:
+layout
+=
+"
+layout
+/
+preference_category_no_icon_style
+"
+android
+:
+title
+=
+"
+string
+/
+preferences_category_content
+"
+>
+<
+SwitchPreference
+android
+:
+icon
+=
+"
+drawable
+/
+mozac_ic_device_desktop_24
+"
+android
+:
+defaultValue
+=
+"
+false
+"
+android
+:
+key
+=
+"
+string
+/
+pref_key_desktop_browsing
+"
+android
+:
+title
+=
+"
+string
+/
+preference_feature_desktop_mode_default
+"
+app
+:
+iconSpaceReserved
+=
+"
+false
+"
+/
+>
+<
+/
+androidx
+.
+preference
+.
+PreferenceCategory
+>
+<
+androidx
+.
+preference
+.
+PreferenceCategory
+android
+:
+layout
+=
+"
+layout
+/
+preference_category_no_icon_style
+"
+android
+:
+title
+=
+"
+string
+/
+preferences_category_permissions
+"
+>
+<
+androidx
+.
+preference
+.
 Preference
 android
 :
@@ -619,6 +722,14 @@ allowDividerAbove
 true
 "
 /
+>
+<
+/
+androidx
+.
+preference
+.
+PreferenceCategory
 >
 <
 /
