--- a/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
+++ b/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
@@ -6328,6 +6328,24 @@ pref_key_app_cold_start_count
 string
 >
 <
+string
+name
+=
+"
+pref_key_desktop_browsing
+"
+translatable
+=
+"
+false
+"
+>
+pref_key_desktop_browsing
+<
+/
+string
+>
+<
 !
 -
 -
