Bug 1923512 - Fix tab close hover background being flush with container. r=sidebar-reviewers,desktop-theme-reviewers,tabbrowser-reviewers,dao,mstriemer
By utilizing a negative margin-inline-end on the .tab-close-button while
in vertical tabs mode, we prevent the hover background from being flush
with the tab container itself. This margin-inline-end is controlled
by the same value we use for the padding on the .tab-close-button.

Differential Revision: https://phabricator.services.mozilla.com/D225132

UltraBlame original commit: 7ace49064f29381af605acb7ec24f9cc77eb242e

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -345,6 +345,18 @@ margin
 -
 tab
 -
+close
+-
+button
+-
+padding
+:
+6px
+;
+-
+-
+tab
+-
 shadow
 -
 max
@@ -4478,7 +4490,18 @@ height
 ;
 padding
 :
-6px
+var
+(
+-
+-
+tab
+-
+close
+-
+button
+-
+padding
+)
 ;
 border
 -
@@ -8821,6 +8844,39 @@ tab
 min
 -
 height
+)
+;
+}
+.
+tab
+-
+close
+-
+button
+{
+margin
+-
+inline
+-
+end
+:
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+close
+-
+button
+-
+padding
+)
 )
 ;
 }
