Bug 1923299 - Add live engine information in `about:inference` r=vazish
Differential Revision: https://phabricator.services.mozilla.com/D224919

UltraBlame original commit: 9e87547823d7b8df48d8977cd89d8c31d1d21937

--- a/toolkit/components/aboutinference/content/aboutInference.html
+++ b/toolkit/components/aboutinference/content/aboutInference.html
@@ -373,6 +373,72 @@ content
 "
 >
 <
+ul
+class
+=
+"
+tab
+-
+menu
+"
+>
+<
+li
+class
+=
+"
+active
+"
+>
+Local
+Inference
+<
+/
+li
+>
+<
+li
+>
+HTTP
+Inference
+<
+/
+li
+>
+<
+li
+>
+Models
+Storage
+<
+/
+li
+>
+<
+/
+ul
+>
+<
+!
+-
+-
+local
+tab
+-
+-
+>
+<
+div
+class
+=
+"
+tab
+-
+content
+active
+"
+>
+<
 div
 class
 =
@@ -404,66 +470,6 @@ id
 "
 predefined
 "
->
-<
-option
-value
-=
-"
-summary
-"
->
-Summary
-<
-/
-option
->
-<
-option
-value
-=
-"
-image
--
-to
--
-text
-"
->
-Image
-To
-Text
-<
-/
-option
->
-<
-option
-value
-=
-"
-zero
-"
->
-Zero
-Shot
-Classification
-<
-/
-option
->
-<
-option
-value
-=
-"
-ner
-"
->
-NER
-<
-/
-option
 >
 <
 /
@@ -1048,7 +1054,23 @@ div
 id
 =
 "
-runningInference
+statusTableContainer
+"
+>
+<
+/
+div
+>
+<
+hr
+/
+>
+<
+div
+id
+=
+"
+procInfoTableContainer
 "
 >
 <
@@ -1105,76 +1127,27 @@ fieldset
 div
 >
 <
-fieldset
+/
+div
+>
+<
+!
+-
+-
+http
+tab
+-
+-
+>
+<
+div
 class
 =
 "
-large
+tab
+-
+content
 "
->
-<
-legend
-data
--
-l10n
--
-id
-=
-"
-about
--
-inference
--
-models
--
-title
-"
->
-<
-/
-legend
->
-<
-p
-data
--
-l10n
--
-id
-=
-"
-about
--
-inference
--
-downloads
--
-description
-"
->
-<
-/
-p
->
-<
-div
-id
-=
-"
-modelFiles
-"
->
-<
-/
-div
->
-<
-/
-fieldset
->
-<
-/
-div
 >
 <
 div
@@ -1594,6 +1567,129 @@ fieldset
 <
 /
 div
+>
+<
+/
+div
+>
+<
+!
+-
+-
+model
+tab
+-
+-
+>
+<
+div
+class
+=
+"
+tab
+-
+content
+"
+>
+<
+div
+class
+=
+"
+fieldset
+-
+container
+"
+>
+<
+fieldset
+class
+=
+"
+large
+"
+>
+<
+legend
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+inference
+-
+models
+-
+title
+"
+>
+<
+/
+legend
+>
+<
+p
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+inference
+-
+downloads
+-
+description
+"
+>
+<
+/
+p
+>
+<
+div
+id
+=
+"
+modelFiles
+"
+>
+<
+/
+div
+>
+<
+/
+fieldset
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+!
+-
+-
+end
+of
+content
+-
+-
 >
 <
 /
