--- a/toolkit/components/aboutinference/content/aboutInference.html
+++ b/toolkit/components/aboutinference/content/aboutInference.html
@@ -865,6 +865,82 @@ label
 for
 =
 "
+numRuns
+"
+>
+Number
+of
+runs
+:
+<
+/
+label
+>
+<
+span
+class
+=
+"
+tooltip
+"
+>
+<
+span
+class
+=
+"
+tooltiptext
+"
+>
+Number
+of
+times
+to
+run
+<
+/
+span
+>
+<
+/
+span
+>
+<
+input
+id
+=
+"
+numRuns
+"
+type
+=
+"
+number
+"
+min
+=
+"
+1
+"
+value
+=
+"
+1
+"
+/
+>
+<
+/
+div
+>
+<
+div
+>
+<
+label
+for
+=
+"
 numThreads
 "
 >
