Bug 1923367 - Go back to using the dropdown icon for all-tabs button when it's in the tabs toolbar. r=desktop-theme-reviewers,tabbrowser-reviewers,rpl
Differential Revision: https://phabricator.services.mozilla.com/D224961

UltraBlame original commit: 756b1c3bfb88c5cd3427249730465318d463f178

--- a/browser/themes/shared/addons/extension-controlled.css
+++ b/browser/themes/shared/addons/extension-controlled.css
@@ -175,15 +175,15 @@ chrome
 :
 /
 /
-browser
+global
 /
-content
+skin
 /
-firefoxview
+icons
 /
-view
+arrow
 -
-opentabs
+down
 .
 svg
 "
@@ -201,6 +201,39 @@ fill
 fill
 :
 currentColor
+;
+&
+.
+alltabs
+-
+icon
+-
+generic
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+firefoxview
+/
+view
+-
+opentabs
+.
+svg
+"
+)
 ;
 height
 :
@@ -237,6 +270,7 @@ block
 -
 2px
 ;
+}
 }
 }
 .
