--- a/toolkit/themes/shared/toolbarbutton.css
+++ b/toolkit/themes/shared/toolbarbutton.css
@@ -603,64 +603,6 @@ top
 :
 1px
 ;
-}
-}
-media
-not
-(
--
-moz
--
-platform
-:
-macos
-)
-{
-.
-toolbarbutton
--
-badge
--
-stack
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-{
-margin
--
-inline
--
-end
-:
-0
-;
-}
-}
-media
-(
--
-moz
--
-platform
-:
-macos
-)
-{
 toolbar
 [
 mode
@@ -674,10 +616,7 @@ icons
 |
 *
 >
-.
-toolbarbutton
--
-badge
+&
 {
 margin
 -
@@ -690,5 +629,6 @@ end
 !
 important
 ;
+}
 }
 }
