--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -9723,6 +9723,20 @@ toolbarbutton
 -
 icon
 {
+-
+-
+panel
+-
+and
+-
+palette
+-
+icon
+-
+size
+:
+20px
+;
 width
 :
 20px
@@ -9732,6 +9746,60 @@ margin
 -
 2px
 ;
+}
+#
+TabsToolbar
+&
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+arrow
+-
+down
+.
+svg
+"
+)
+;
+>
+.
+toolbarbutton
+-
+badge
+-
+stack
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+16px
+;
+margin
+:
+0
+;
+}
 }
 #
 tabbrowser
