Bug 1921483 - Add 'See details' link to the alert dialog shown on addon-install-failed on Firefox Desktop. r=willdurand,fluent-reviewers,desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D225107

UltraBlame original commit: bd8952bbc14d562241a0fcfadc8688b96830e70c

--- a/browser/themes/shared/addon-notification.css
+++ b/browser/themes/shared/addon-notification.css
@@ -825,6 +825,33 @@ start
 ;
 }
 .
+popup
+-
+notification
+-
+description
+[
+popupid
+=
+"
+addon
+-
+install
+-
+failed
+-
+blocklist
+"
+]
+{
+font
+-
+weight
+:
+normal
+;
+}
+.
 addon
 -
 webext
