Bug 1924163 - Reduce font sizes on list feed cards r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D225388

UltraBlame original commit: 172a2023bc099028b4c0acf34d7a6d72d9f09080

--- a/browser/components/newtab/content-src/components/DiscoveryStreamComponents/ListFeed/_ListFeed.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamComponents/ListFeed/_ListFeed.scss
@@ -1003,6 +1003,41 @@ xsmall
 )
 ;
 }
+.
+source
+{
+margin
+-
+bottom
+:
+1px
+;
+}
+.
+title
+{
+font
+-
+size
+:
+var
+(
+-
+-
+font
+-
+size
+-
+small
+)
+;
+line
+-
+height
+:
+19px
+;
+}
 }
 .
 excerpt
