--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -54493,6 +54493,89 @@ feed
 -
 card
 .
+meta
+.
+source
+{
+margin
+-
+bottom
+:
+1px
+;
+}
+.
+ds
+-
+card
+-
+grid
+.
+list
+-
+feed
+-
+content
+.
+ds
+-
+card
+.
+list
+-
+feed
+-
+card
+.
+meta
+.
+title
+{
+font
+-
+size
+:
+var
+(
+-
+-
+font
+-
+size
+-
+small
+)
+;
+line
+-
+height
+:
+19px
+;
+}
+.
+ds
+-
+card
+-
+grid
+.
+list
+-
+feed
+-
+content
+.
+ds
+-
+card
+.
+list
+-
+feed
+-
+card
+.
 excerpt
 {
 display
