Bug 1920032 - Hide the SearchModeSwitcher in readonly urlbars. r=dao,desktop-theme-reviewers,urlbar-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224477

UltraBlame original commit: 1a0a02afa2580045bdcb21f311deec4977f49eed

--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -8741,10 +8741,6 @@ appearance
 :
 none
 ;
-display
-:
-none
-;
 background
 -
 color
@@ -8912,10 +8908,6 @@ radius
 stylelint
 -
 disable
--
-next
--
-line
 media
 -
 query
@@ -8926,6 +8918,8 @@ invalid
 *
 /
 media
+(
+not
 (
 -
 moz
@@ -8944,7 +8938,10 @@ searchModeSwitcher
 featureGate
 "
 )
-or
+)
+and
+(
+not
 (
 -
 moz
@@ -8963,12 +8960,27 @@ scotchBonnet
 enableOverride
 "
 )
+)
 {
 display
 :
-flex
+none
 ;
 }
+/
+*
+stylelint
+-
+enable
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
 }
 #
 searchmode
