Bug 1886005 - Theme selector card for about:editprofile. r=jhirsch,firefox-desktop-core-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224003

UltraBlame original commit: e5f3ded920f3f07045cd1a0609037a8cb2da9d27

--- a/browser/components/profiles/content/edit-profile-card.css
+++ b/browser/components/profiles/content/edit-profile-card.css
@@ -118,6 +118,33 @@ height
 100
 %
 ;
+background
+-
+color
+:
+var
+(
+-
+-
+newtab
+-
+background
+-
+color
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+background
+)
+)
+;
 }
 edit
 -
