--- a/browser/components/profiles/content/edit-profile.html
+++ b/browser/components/profiles/content/edit-profile.html
@@ -131,8 +131,6 @@ content
 default
 -
 src
-resource
-:
 chrome
 :
 ;
@@ -273,6 +271,28 @@ profile
 card
 .
 mjs
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+contentTheme
+.
+js
 "
 >
 <
