Bug 1924078 - Remove custom warning and custom tabs r=vazish,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225347

UltraBlame original commit: 4ae9cb5b911f6633cc6ab8603df7545863b75738

--- a/toolkit/components/aboutinference/content/aboutInference.html
+++ b/toolkit/components/aboutinference/content/aboutInference.html
@@ -160,13 +160,9 @@ chrome
 /
 global
 /
-skin
-/
-in
--
 content
 /
-common
+aboutInference
 .
 css
 "
@@ -213,38 +209,235 @@ js
 script
 >
 <
-link
-rel
-=
-"
-stylesheet
-"
-href
-=
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-aboutInference
-.
-css
-"
-/
->
-<
 /
 head
 >
 <
 body
+id
+=
+"
+body
+"
+>
+<
+div
+id
+=
+"
+categories
+"
+>
+<
+div
+class
+=
+"
+category
+category
+-
+no
+-
+icon
+"
+selected
+=
+"
+true
+"
+id
+=
+"
+category
+-
+local
+-
+inference
+"
+>
+<
+span
+class
+=
+"
+category
+-
+name
+"
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+inference
+-
+category
+-
+local
+-
+inference
+"
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+category
+category
+-
+no
+-
+icon
+"
+id
+=
+"
+category
+-
+http
+-
+inference
+"
+>
+<
+span
+class
+=
+"
+category
+-
+name
+"
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+inference
+-
+category
+-
+http
+-
+inference
+"
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+category
+category
+-
+no
+-
+icon
+"
+id
+=
+"
+category
+-
+models
+-
+storage
+"
+>
+<
+span
+class
+=
+"
+category
+-
+name
+"
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+inference
+-
+category
+-
+models
+-
+storage
+"
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+main
+-
+content
+"
+id
+=
+"
+content
+"
+>
+<
+div
+class
+=
+"
+header
+"
 >
 <
 h1
+id
+=
+"
+sectionTitle
+"
 data
 -
 l10n
@@ -257,6 +450,13 @@ about
 inference
 -
 header
+"
+class
+=
+"
+header
+-
+name
 "
 >
 <
@@ -336,105 +536,60 @@ a
 p
 >
 <
-div
+moz
+-
+message
+-
+bar
+type
+=
+"
+warning
+"
 id
 =
 "
 warning
 "
+message
+=
+"
+"
 >
-browser
-.
-ml
-.
-enable
-is
-set
-to
-False
-!
-Toggle
-it
-to
-activate
-local
-inference
-.
+<
+/
+moz
+-
+message
+-
+bar
+>
 <
 /
 div
+>
+<
+!
+-
+-
+local
+tab
+-
+-
 >
 <
 div
 id
 =
 "
-content
-"
->
-<
-ul
-class
-=
-"
-tab
--
-menu
-"
->
-<
-li
-class
-=
-"
-active
-"
->
-Local
-Inference
-<
-/
-li
->
-<
-li
->
-HTTP
-Inference
-<
-/
-li
->
-<
-li
->
-Models
-Storage
-<
-/
-li
->
-<
-/
-ul
->
-<
-!
--
--
 local
-tab
 -
--
->
-<
-div
+inference
+"
 class
 =
 "
 tab
--
-content
 active
 "
 >
@@ -1217,12 +1372,22 @@ tab
 >
 <
 div
+id
+=
+"
+http
+-
+inference
+"
 class
 =
 "
 tab
--
-content
+"
+hidden
+=
+"
+true
 "
 >
 <
@@ -1659,12 +1824,22 @@ tab
 >
 <
 div
+id
+=
+"
+models
+-
+storage
+"
 class
 =
 "
 tab
--
-content
+"
+hidden
+=
+"
+true
 "
 >
 <
