--- a/toolkit/components/aboutinference/content/aboutInference.css
+++ b/toolkit/components/aboutinference/content/aboutInference.css
@@ -80,21 +80,139 @@ css
 ;
 html
 {
-background
--
-color
+height
 :
-var
-(
+100
+%
+;
+}
+.
+category
+.
+category
 -
+name
+{
+pointer
 -
-in
+events
+:
+none
+;
+}
+.
+category
+{
+cursor
+:
+pointer
+;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+}
+body
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+stretch
+;
+height
+:
+100
+%
+;
+}
+.
+main
 -
 content
+{
+flex
+:
+1
+;
+}
+.
+tab
+{
+padding
+:
+0
+.
+5em
+0
+;
+}
+.
+fieldset
 -
-page
+container
+{
+display
+:
+flex
+;
+flex
 -
-background
+wrap
+:
+wrap
+;
+gap
+:
+10px
+;
+}
+.
+fieldset
+-
+container
+fieldset
+{
+flex
+:
+1
+1
+48
+%
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+box
+-
+shadow
+:
+0
+0
+10px
+rgba
+(
+0
+0
+0
+0
+.
+1
 )
 ;
 }
@@ -139,24 +257,6 @@ background
 cursor
 :
 pointer
-;
-}
-body
-{
-padding
-:
-0
-2em
-;
-min
--
-width
-:
-45em
-;
-margin
-:
-auto
 ;
 }
 caption
@@ -300,34 +400,6 @@ odd
 )
 ;
 }
-#
-warning
-{
-display
-:
-none
-;
-border
-:
-1px
-solid
-red
-;
-padding
-:
-10px
-;
-color
-:
-red
-;
-margin
--
-bottom
-:
-15px
-;
-}
 textarea
 {
 width
@@ -353,121 +425,6 @@ sizing
 border
 -
 box
-;
-}
-legend
-{
-font
--
-size
-:
-1
-.
-5em
-;
-font
--
-weight
-:
-bold
-;
-padding
-:
-5px
-;
-}
-.
-fieldset
--
-container
-{
-display
-:
-flex
-;
-flex
--
-wrap
-:
-wrap
-;
-gap
-:
-10px
-;
-/
-*
-Optional
-:
-Adds
-some
-space
-between
-fieldsets
-*
-/
-}
-.
-fieldset
--
-container
-fieldset
-{
-flex
-:
-1
-1
-48
-%
-;
-/
-*
-Makes
-the
-fieldsets
-take
-approximately
-half
-the
-width
-*
-/
-box
--
-sizing
-:
-border
--
-box
-;
-/
-*
-Ensures
-padding
-/
-border
-do
-not
-affect
-width
-*
-/
-box
--
-shadow
-:
-0
-0
-10px
-rgba
-(
-0
-0
-0
-0
-.
-1
-)
 ;
 }
 legend
@@ -968,128 +925,6 @@ radius
 5px
 ;
 }
-.
-tab
--
-menu
-{
-display
-:
-flex
-;
-justify
--
-content
-:
-flex
--
-start
-;
-list
--
-style
-:
-none
-;
-padding
-:
-0
-;
-margin
-:
-0
-0
-20px
-0
-;
-background
--
-color
-:
-#
-f1f1f1
-;
-}
-.
-tab
--
-menu
-li
-{
-padding
-:
-10px
-20px
-;
-cursor
-:
-pointer
-;
-background
--
-color
-:
-#
-ccc
-;
-margin
--
-right
-:
-5px
-;
-border
-:
-1px
-solid
-#
-ddd
-;
-}
-.
-tab
--
-menu
-li
-.
-active
-{
-background
--
-color
-:
-#
-fff
-;
-border
--
-bottom
-:
-none
-;
-}
-.
-tab
--
-content
-{
-display
-:
-none
-;
-}
-.
-tab
--
-content
-.
-active
-{
-display
-:
-block
-;
-}
 #
 modelFiles
 {
@@ -1107,16 +942,6 @@ gap
 :
 10px
 ;
-/
-*
-Optional
-:
-Adds
-spacing
-between
-tables
-*
-/
 }
 #
 modelFiles
@@ -1136,20 +961,6 @@ calc
 10px
 )
 ;
-/
-*
-Each
-table
-takes
-1
-/
-3
-of
-the
-container
-width
-*
-/
 box
 -
 sizing
@@ -1170,30 +981,12 @@ side
 :
 bottom
 ;
-/
-*
-Moves
-the
-caption
-below
-the
-table
-*
-/
 text
 -
 align
 :
 center
 ;
-/
-*
-Centers
-the
-caption
-text
-*
-/
 font
 -
 weight
