Bug 1764822 - Implement mica titlebar behind a (default off) pref. r=desktop-theme-reviewers,win-reviewers,dao,rkraesig
This is somewhat straight-forward now that all the dependencies are
landed.

I think we do need to find a solution to make the app titlebar buttons
taller, by hiding the caption buttons
(https://phabricator.services.mozilla.com/D207303 tried to do this, but
ran into other issues), or making the titlebar taller, which is doable
in UWP at least, but I don't see any way of doing it in win32 apps:

 * https://learn.microsoft.com/en-us/windows/windows-app-sdk/api/winrt/microsoft.ui.windowing.appwindowtitlebar.preferredheightoption?view=windows-app-sdk-1.6

But still this is usable and would be worth getting in, since it's
needed for the translucent sidebar work too.

Differential Revision: https://phabricator.services.mozilla.com/D225364

UltraBlame original commit: 67cca07bbf52337406cc8c71743bda9e345f973f

--- a/browser/themes/shared/browser-colors.css
+++ b/browser/themes/shared/browser-colors.css
@@ -840,25 +840,6 @@ or
 -
 moz
 -
-platform
-:
-linux
-)
-or
-(
-(
--
-moz
--
-platform
-:
-macos
-)
-and
-(
--
-moz
--
 bool
 -
 pref
@@ -868,13 +849,10 @@ browser
 .
 theme
 .
-macos
-.
 native
 -
 theme
 "
-)
 )
 )
 {
@@ -1332,6 +1310,16 @@ moz
 -
 windows
 -
+mica
+)
+or
+(
+(
+-
+moz
+-
+windows
+-
 accent
 -
 color
@@ -1366,6 +1354,7 @@ tabs
 .
 enabled
 "
+)
 )
 )
 {
