--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -230,6 +230,15 @@ in
 -
 titlebar
 )
+or
+(
+-
+moz
+-
+windows
+-
+mica
+)
 {
 :
 root
@@ -237,6 +246,81 @@ root
 tabsintitlebar
 ]
 {
+media
+(
+-
+moz
+-
+windows
+-
+mica
+)
+{
+&
+:
+not
+(
+[
+lwtheme
+]
+)
+{
+background
+-
+color
+:
+transparent
+;
+/
+*
+Hide
+the
+Firefox
+buttons
+since
+Windows
+draws
+their
+own
+.
+*
+FIXME
+(
+emilio
+)
+:
+Find
+a
+way
+of
+hiding
+the
+native
+buttons
+or
+make
+them
+*
+taller
+this
+is
+very
+hacky
+.
+*
+/
+.
+titlebar
+-
+buttonbox
+{
+opacity
+:
+0
+;
+}
+}
+}
 /
 *
 stylelint
@@ -256,6 +340,15 @@ invalid
 *
 /
 media
+(
+-
+moz
+-
+windows
+-
+mica
+)
+or
 (
 -
 moz
@@ -568,23 +661,6 @@ can
 swallow
 those
 events
-.
-It
-will
-also
-place
-the
-buttons
-above
-the
-fog
-on
-*
-Windows
-7
-with
-Aero
-Glass
 .
 *
 /
