Bug 1919161 - update Toolbar button touch targets r=android-reviewers,skhan,petru
Differential Revision: https://phabricator.services.mozilla.com/D222878

UltraBlame original commit: caacbe097229b1fad5816b2d4935eef0b2d435b0

--- a/mobile/android/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_displaytoolbar.xml
+++ b/mobile/android/android-components/components/browser/toolbar/src/main/res/layout/mozac_browser_toolbar_displaytoolbar.xml
@@ -291,7 +291,9 @@ android
 layout_height
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_height
 "
 android
 :
@@ -321,14 +323,18 @@ mozac
 actionContainerItemSize
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_container_item_size
 "
 tools
 :
 layout_width
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_width
 "
 /
 >
@@ -1058,7 +1064,9 @@ android
 layout_height
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_height
 "
 android
 :
@@ -1096,14 +1104,18 @@ mozac
 actionContainerItemSize
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_container_item_size
 "
 tools
 :
 layout_width
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_width
 "
 /
 >
@@ -1150,7 +1162,9 @@ android
 layout_height
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_height
 "
 android
 :
@@ -1180,14 +1194,18 @@ mozac
 actionContainerItemSize
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_container_item_size
 "
 tools
 :
 layout_width
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_width
 "
 /
 >
@@ -1226,14 +1244,18 @@ android
 layout_width
 =
 "
-36dp
+dimen
+/
+mozac_browser_toolbar_button_width
 "
 android
 :
 layout_height
 =
 "
-48dp
+dimen
+/
+mozac_browser_toolbar_button_height
 "
 android
 :
