--- a/mobile/android/fenix/app/src/main/res/values/dimens.xml
+++ b/mobile/android/fenix/app/src/main/res/values/dimens.xml
@@ -1220,6 +1220,71 @@ browser_fragment_download_dialog_elevation
 dimen
 >
 <
+!
+-
+-
+Display
+Toolbar
+-
+-
+>
+<
+!
+-
+-
+The
+size
+of
+padding
+for
+the
+display
+toolbar
+.
+-
+-
+>
+<
+dimen
+name
+=
+"
+browser_fragment_display_toolbar_padding
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+16dp
+<
+/
+dimen
+>
+<
+dimen
+name
+=
+"
+mozac_browser_toolbar_button_width
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+48dp
+<
+/
+dimen
+>
+<
 dimen
 name
 =
