--- a/mobile/android/android-components/components/browser/toolbar/src/main/res/values/dimens.xml
+++ b/mobile/android/android-components/components/browser/toolbar/src/main/res/values/dimens.xml
@@ -224,6 +224,45 @@ dimen
 name
 =
 "
+mozac_browser_toolbar_button_container_item_size
+"
+>
+48dp
+<
+/
+dimen
+>
+<
+dimen
+name
+=
+"
+mozac_browser_toolbar_button_height
+"
+>
+48dp
+<
+/
+dimen
+>
+<
+dimen
+name
+=
+"
+mozac_browser_toolbar_button_width
+"
+>
+36dp
+<
+/
+dimen
+>
+<
+dimen
+name
+=
+"
 mozac_browser_toolbar_start_end_margin
 "
 >
