Bug 1923461 - Add description to Firefox logo label for talkback r=android-reviewers,npoon
Differential Revision: https://phabricator.services.mozilla.com/D225238

UltraBlame original commit: 3f7d88d06625d98c51442773f325f1d5e9a3ae3f

--- a/mobile/android/fenix/app/src/main/res/layout/fragment_home.xml
+++ b/mobile/android/fenix/app/src/main/res/layout/fragment_home.xml
@@ -536,13 +536,6 @@ false
 "
 android
 :
-importantForAccessibility
-=
-"
-no
-"
-android
-:
 orientation
 =
 "
@@ -554,6 +547,15 @@ layout_collapseMode
 =
 "
 parallax
+"
+android
+:
+contentDescription
+=
+"
+string
+/
+app_name
 "
 app
 :
@@ -606,13 +608,6 @@ adjustViewBounds
 "
 true
 "
-android
-:
-contentDescription
-=
-"
-null
-"
 app
 :
 srcCompat
@@ -620,6 +615,13 @@ srcCompat
 "
 ?
 fenixWordmarkLogo
+"
+android
+:
+contentDescription
+=
+"
+null
 "
 tools
 :
