Bug 1920079 - Layout Expt (Var B) - Fix zoom issue on customize panel not overlapping content when open r=home-newtab-reviewers,desktop-theme-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D224834

UltraBlame original commit: 796cbfef9ec18735c24867e4464fdb445a71b38f

--- a/browser/components/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -91,6 +91,26 @@ position
 :
 relative
 ;
+/
+/
+Bug
+1914571
+:
+Reset
+the
+z
+-
+index
+threshold
+for
+topic
+labels
+z
+-
+index
+:
+0
+;
 &
 .
 placeholder
