--- a/browser/components/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
+++ b/browser/components/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
@@ -9,6 +9,31 @@ padding
 :
 0
 ;
+/
+/
+z
+-
+index
+note
+:
+menu
+should
+cover
+fixed
+search
+bar
+and
+asrouter
+dev
+tools
+toggle
+button
+z
+-
+index
+:
+3
+;
 media
 (
 height
@@ -92,12 +117,6 @@ space
 -
 xlarge
 )
-;
-z
--
-index
-:
-1000
 ;
 }
 }
