Bug 1920062 - Layout Expt (Var B) - Fix issue where search bar overlaps logo/weather widget on smallest breakpoint r=home-newtab-reviewers,desktop-theme-reviewers,sfoster,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D224835

UltraBlame original commit: d75e4c21416bb40ad0366944e5741a87a6924ad3

--- a/browser/components/newtab/content-src/components/Search/_Search.scss
+++ b/browser/components/newtab/content-src/components/Search/_Search.scss
@@ -1143,8 +1143,44 @@ wrapper
 {
 width
 :
+200px
+;
+media
+(
+min
+-
+width
+:
+break
+-
+point
+-
+small
+)
+{
+width
+:
+300px
+;
+}
+media
+(
+min
+-
+width
+:
+break
+-
+point
+-
+medium
+)
+{
+width
+:
 350px
 ;
+}
 media
 (
 min
