--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -13696,8 +13696,76 @@ wrapper
 {
 width
 :
+200px
+;
+}
+media
+(
+min
+-
+width
+:
+510px
+)
+{
+.
+layout
+-
+variant
+-
+b
+.
+has
+-
+recommended
+-
+stories
+.
+search
+-
+inner
+-
+wrapper
+{
+width
+:
+300px
+;
+}
+}
+media
+(
+min
+-
+width
+:
+610px
+)
+{
+.
+layout
+-
+variant
+-
+b
+.
+has
+-
+recommended
+-
+stories
+.
+search
+-
+inner
+-
+wrapper
+{
+width
+:
 350px
 ;
+}
 }
 media
 (
